# quant-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
"docs/: BTC_ETH\345\217\214\346\240\207\347\232\204\347\240\224\347\251\266\346\265\201_2026-03-26.md"
"scripts/: QuantLab\345\201\234\346\255\242.ps1"  QuantLab\345\220\257\345\212\250.ps1"  \345\220\257\345\212\250\344\270\255\346\226\207\345\256\242\346\210\267\347\253\257.cmd"  \345\220\257\345\212\250\344\270\255\346\226\207\345\256\242\346\210\267\347\253\257.ps1"  \346\250\241\346\213\237\347\233\230\350\207\252\345\212\250\344\272\244\346\230\223\345\220\257\345\212\250.cmd"  \346\250\241\346\213\237\347\233\230\350\207\252\345\212\250\344\272\244\346\230\223\345\220\257\345\212\250.ps1"
config/: high_weight_btc.yaml  live_single_btc.example.yaml  okx_profiles.example.toml  settings.example.yaml  settings_1h_research.yaml  trend_breakout_btc.yaml  trend_pullback_btc.yaml  trend_regime_btc.yaml
docs/: change_preflight_checklist_2026-03-31.md  github_deploy_windows.md  high_weight_long_strategy_2026-03-28.md  iteration_readiness_checklist_2026-03-31.md  live_rollout_stage0_runbook_2026-03-30.md  maintainer_onboarding_2026-03-29.md  modification_plan_2026-03-31.md  productization_gap_assessment_2026-03-31.md  research_governance_workflow_2026-03-28.md  runtime_hard_constraints_2026-03-30.md  tradingagents_research_provider_2026-03-29.md
scripts/: BuildChineseClientLauncher.ps1  DemoDrill.cmd  DemoDrill.ps1  DemoPreflight.cmd  DemoPreflight.ps1  QuantLabChineseClientLauncher.cs  (+17 more)
(+96 files in other folders)
