[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-lab"
version = "0.1.0"
description = "Local OKX crypto backtesting scaffold for a 4h trend system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.27.2",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=18.0.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.37",
  "tenacity>=9.0.0",
  "typer>=0.15.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.7",
]

[project.scripts]
quant-lab = "quant_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_lab"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
